--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <title>Paul Makes Cards</title>
   <link href="main.css" type="text/css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
+  <script src="main.js"></script>
 </head>
 <body>
   <section class="top">
